--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_otp
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=12345
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
-spring.devtools.restart.enabled:  false
+spring.devtools.restart.enabled=false
+
+spring.jpa.hibernate.ddl-auto=update
+
+security.jwt.token.secret-key=secret-key-for-encryption
+security.jwt.token.expiration=600000
+
+jwt.signing.key=pxAu1r828Yjaf9JY8qbo6JFsjolZMmK+O2Fdp94X5bw=
