refactored and added image crud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ security.jwt.token.secret-key=secret-key-for-encryption
 security.jwt.token.expiration=600000
 
 jwt.signing.key=pxAu1r828Yjaf9JY8qbo6JFsjolZMmK+O2Fdp94X5bw=
+spring.data.mongodb.uri=mongodb://localhost:27017/imaginary
