--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.wordquest'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 java {
 	sourceCompatibility = '17'
@@ -27,13 +27,16 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 
+	//servicing
+	implementation("org.springframework.boot:spring-boot-starter-actuator:3.2.4")
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-	testImplementation 'com.h2database:h2:1.3.148'
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+//	testImplementation 'com.h2database:h2:1.3.148'
 }
 
 tasks.named('test') {
