--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,31 @@
+#security
+security.jwt.token.secret-key=secret-key-for-encryption
+security.jwt.token.expiration=600000
+jwt.signing.key=pxAu1r828Yjaf9JY8qbo6JFsjolZMmK+O2Fdp94X5bw=
+
+#datasource
+spring.data.mongodb.uri=mongodb://localhost:27017/imaginary
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_otp
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=12345
+
+#persistence
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+
+#server health check
+management.endpoints.web.exposure.include=health
+
+#container management
+spring.boot.build-image.layers.enabled=true
+spring.boot.build-image.layers.configuration=dependencies,resources,classes,spring-boot-loader
+
+#build service
 spring.devtools.restart.enabled=false
-
-spring.jpa.hibernate.ddl-auto=update
-
-security.jwt.token.secret-key=secret-key-for-encryption
-security.jwt.token.expiration=600000
-
-jwt.signing.key=pxAu1r828Yjaf9JY8qbo6JFsjolZMmK+O2Fdp94X5bw=
-spring.data.mongodb.uri=mongodb://localhost:27017/imaginary
