--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 #security
 security.jwt.token.secret-key=secret-key-for-encryption
-security.jwt.token.expiration=600000
-jwt.signing.key=pxAu1r828Yjaf9JY8qbo6JFsjolZMmK+O2Fdp94X5bw=
+security.jwt.token.expiration=${JWT_EXPIRATION}
+jwt.signing.key=${JWT_KEY}
 
 #datasource
-spring.data.mongodb.uri=mongodb://localhost:27017/imaginary
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_otp
+spring.data.mongodb.uri=${NOSQL_DB_URI}
+spring.datasource.url=${SQL_DB_URI}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=12345
+
 
 #persistence
 spring.jpa.hibernate.ddl-auto=create
